<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareSight</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Capture</string>
    <string name="action_camera_select">Select File</string>
    <string name="action_camera_capture">Take Photo</string>
    <string name="action_exit">Exit</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_upload">Upload</string>
    <string name="action_upload">OK</string>
    <string name="action_uploading">Uploading</string>
    <string name="action_loading">Loading</string>
    <string name="action_cancel">Cancel</string>
    <string name="img_upload_desc">Confirm Upload this Image</string>
    <string name="title_activity_view">View</string>
    <string name="image_item_desc">Image Item</string>
    <string name="action_good">Like</string>
    <string name="action_good_toast">Like it</string>
    <string name="action_sdcard_notfound">SD card not found</string>
    <string name="action_upload_location">Location Detecting&#8230;</string>
    <string name="action_upload_hint">Say Something(Optional)&#8230;</string>
    <string name="image_item_notext">No words&#8230;</string>
    <string name="cannot_get_location">Can not detect your location&#8230;</string>

</resources>
